Can't select extruded Vertex. #70103

Closed
opened 2019-09-20 10:00:19 +02:00 by Hans Nolte · 9 comments

System Information
Operating system: Win 7 Pro 64 Bit
Graphics card: GTX 1070 - Driver 419.67

Blender Version
Broken: blender-2.81-c8df6f2cf9df-windows64
Worked: (optional)

Short Description
If I extrude a point I can not select it.
Only after I switched once in the object mode, I can select it.

Blend:
cant-select-vertex.blend

Exact steps for others to reproduce the error
See Video

cant-select-vertex.mp4

**System Information** Operating system: Win 7 Pro 64 Bit Graphics card: GTX 1070 - Driver 419.67 **Blender Version** Broken: blender-2.81-c8df6f2cf9df-windows64 Worked: (optional) **Short Description** If I extrude a point I can not select it. Only after I switched once in the object mode, I can select it. Blend: [cant-select-vertex.blend](https://archive.blender.org/developer/F7760368/cant-select-vertex.blend) **Exact steps for others to reproduce the error** See Video [cant-select-vertex.mp4](https://archive.blender.org/developer/F7760359/cant-select-vertex.mp4)
Author

Added subscriber: @ditos

Added subscriber: @ditos
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking... (was still working in 1e375ab5a1...bisecting...)

Confirmed, checking... (was still working in 1e375ab5a1...bisecting...)
Member

Added subscriber: @brecht

Added subscriber: @brecht
Member

Apparently caused by e7a514369f.
Not sure if @brecht has time to look into this?

Apparently caused by e7a514369f. Not sure if @brecht has time to look into this?

Added subscriber: @HARDNAX

Added subscriber: @HARDNAX

I also confirm it ( #70103 Can't select extruded Vertex ) in Linux-5.0.0-29-lowlatency-x86_64-with-Ubuntu-19.04-disco 64 Bits X.Org 4.5 (Core Profile) Mesa 19.0.8
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-20 13:18, hash: d1cc340e56

I don't know if it's related or it's for another bug report, but Blender crashes when selecting all faces and removing them using "Delete> Only Face" in the default cube.
blender.crash.txt

I also confirm it ( #70103 Can't select extruded Vertex ) in Linux-5.0.0-29-lowlatency-x86_64-with-Ubuntu-19.04-disco 64 Bits X.Org 4.5 (Core Profile) Mesa 19.0.8 Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-20 13:18, hash: `d1cc340e56` I don't know if it's related or it's for another bug report, but Blender crashes when selecting all faces and removing them using "Delete> Only Face" in the default cube. [blender.crash.txt](https://archive.blender.org/developer/F7760889/blender.crash.txt)

This issue was referenced by 7926e8ea4c

This issue was referenced by 7926e8ea4c11e55c56b1d051e9ccb68dbfddb58b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-09-21 00:37:03 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70103
No description provided.