Fix selection and snapping misusing texture space as boundbox

This fixes the regression from T70103 introduced by the fix for T70103.