source/blender/draw/engines/select/select_draw_utils.c
@@ -49,8 +49,7 @@ void select_id_object_min_max(Object *obj, float r_min[3], float r_max[3])
   BoundBox *bb;
   BMEditMesh *em = BKE_editmesh_from_object(obj);
   if (em) {
-    /* Use Object Texture Space. */
-    bb = BKE_mesh_texspace_get(em->mesh_eval_cage, NULL, NULL, NULL);
+    bb = BKE_editmesh_cage_boundbox_get(em);
   }
   else {
     bb = BKE_object_boundbox_get(obj);
